--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "moment": "^2.29.1",
     "papaparse": "^5.3.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react": "^16.9.0",
+    "react-datepicker": "^3.5.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "^2.0.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
