--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "dateformat": "^4.5.1",
     "moment": "^2.29.1",
     "papaparse": "^5.3.0",
     "react": "^16.9.0",
